Bug 400893, escape should close panels, r+sr=neil,a=beltzner